# agentic_ai_page_gen

./: .eslintrc.json  .gitignore  .htmlhintrc  .prettierrc  .stylelintrc.json  CLAUDE.md  Makefile  README.md  package.json  pyproject.toml  requirements.txt  sample_businesses.csv  template.yaml
.github/workflows/: ci.yml
data/: sample_businesses.csv
docs/: testing-guide.md
lambdas/agent_generate/: app.py  app.py.backup  bedrock_client.py  requirements.txt  s3_utils.py  schemas.py
lambdas/agent_qc/: app.py  app_fixed.py  bedrock_client.py  prompts.py
lambdas/clean_transform/: app.py  requirements.txt
lambdas/common/: bedrock_client.py  prompts.py  prompts_compact.py  s3_utils.py  schemas.py  seo_rules.py
lambdas/ingest_raw/: app.py  seo_rules.py
lambdas/publish_site/: app.py
lambdas/render_html/: app.py  bedrock_client.py  requirements.txt  schemas.py
notebooks/: eda.ipynb
scripts/: run-tests.sh
site_templates/: base.html  listing.html  robots.txt  sitemap.xml.j2  styles.css
sql/: profiling.sql  publish_list.sql
statemachine/: definition.asl.json
tests/: __init__.py  conftest.py  test_schemas.py  test_seo_rules.py
